# detection-faux-billet

./: main.py  pyproject.toml
Jupyter/: 1_RegLineaire.ipynb  2_description.ipynb  3_TrainTest.ipynb  4_gpt.ipynb  5_kaggle.ipynb  pipeline.joblib  prod.ipynb
Source/: billets_complet.csv
